src/test/resources/Parser/SyntaxErrors/DelegateFromTypeVar.front
class A<T>:
    delegate * : t: T;